Improve TOC UX: fix content changing around when closing TOC, expand/collapse open toc button on hover

--- a/data/templates/html/rules.css
+++ b/data/templates/html/rules.css
@@ -13,8 +13,8 @@ body {
 }
 
 .RulesGrid {
-  /*display: grid;
-  grid-template-columns: 15% 85%;*/
+  display: grid;
+  grid-template-columns: 15em auto;
   
   margin: 0;
 }
@@ -56,18 +56,28 @@ body {
   top: 0.3em;
   position: fixed;
   z-index: 1;
-  left: 1em;
+  left: 0.4em;
   background-color: beige;
   padding: 0.3em;
   border-radius: 0.6em;
   visibility: visible;
   cursor: pointer;
+  width: 1em;
+  height: 1.2em;
+  overflow: clip;
+
+  transition: width 0.2s ease-out 100ms
+}
+
+.TocOpen:hover {
+  width: 10em;
 }
 
 .RulesContent {
   margin-left: 1.6em;
-  margin-top: 1.5em;
   padding: 0.6em;
+
+  grid-column: 1 / 3;
 }
 
 .Title {
